
<resources>
    <string name="app_name">BiblioTech</string>
    <string-array name="personas">
        <item>2 Personas</item>
        <item>4 Personas</item>
        <item>6 Personas</item>
        <item>8 Personas</item>
        <item>10 Personas</item>
    </string-array>
    <string-array name="planta">
        <item>1ºPlanta</item>
        <item>2ºPlanta</item>
        <item>3ºPlanta</item>
    </string-array>
    <string-array name="regions_array">
            <!-- Países donde se habla inglés -->
            <item>Estados Unidos</item>
            <item>Reino Unido</item>
            <item>Canadá</item>
            <item>Australia</item>
            <item>Nueva Zelanda</item>
            <item>Irlanda</item>
            <item>Sudáfrica</item>
            <item>Jamaica</item>
            <!-- Países donde se habla español -->
            <item>España</item>
            <item>México</item>
            <item>Argentina</item>
            <item>Colombia</item>
            <item>Chile</item>
            <item>Perú</item>
            <item>Venezuela</item>
            <item>Ecuador</item>
            <item>Guatemala</item>
            <item>Cuba</item>
            <item>Bolivia</item>
            <item>República Dominicana</item>
            <item>Honduras</item>
            <item>Paraguay</item>
            <item>El Salvador</item>
            <item>Nicaragua</item>
            <item>Costa Rica</item>
            <item>Puerto Rico</item>
            <item>Uruguay</item>
            <item>Guinea Ecuatorial</item>
    </string-array>

    <string-array name="idioma">
       <item>Español (España)</item>
        <item>Inglés (Reino Unido)</item>
        <item>Valenciano (Catalán)</item>
    </string-array>



    <!--Crear Cuenta-->
    <string name="recpassword"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Correo">Correo electrónico</string>
    <string name="ConfiCorreo">Confirmar correo electrónico</string>
    <string name="Contrasena">Contraseña</string>
    <string name="conficontra">Confirmar Contraseña</string>
    <string name="CrearUnaCuanta">Crear una cuenta</string>
    <string name="navigation_drawer_open">open naviegasjdn dreas</string>
    <string name="navigation_drawer_close">cloce naviegasjdn dreas</string>
    <string name="Busca_el_libro_que_deseas">Busca el libro que deseas...</string>
    <string name="Perfil">Perfil</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Salas_reservadas">Salas Reservadas</string>
    <string name="Libros_Reservados">Libros Reservados</string>
    <string name="Config_privacity">Configuración y Privacidad</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Modo_Oscuro">Modo Oscuro</string>
    <string name="Reportar_error">Reportar Error</string>
    <string name="Sesion">Sesión</string>
    <string name="Cerrar_sesion">Cerrar Sesión</string>
    <string name="Bienvenido">¡Bienvenido a Blibliotech!</string>
    <string name="Portal">Tu portal para reservar conocimiento</string>
    <string name="Recordar">Recordar</string>
    <string name="Iniciar_Google">Iniciar Sesión Con Google</string>
    <string name="Acreditacion">Acreditación</string>
    <string name="Estudiante">Estudiante</string>
    <string name="Numero_Estudiante">Número De Estudiante</string>
    <string name="Notificacion">Notificaciones</string>
    <string name="Numero_Personas">Número de personas</string>
    <string name="Planta">Planta</string>
    <string name="Desde">Desde</string>
    <string name="Hasta">Hasta</string>
    <string name="Selecciona_Fecha">Selecciona una fecha disponible</string>
    <string name="Salas_Mas_Reservadas">Salas más reservadas</string>
    <string name="Primera_Planta">Primera Planta</string>
    <string name="Segunda_Planta">Segunda Planta</string>
    <string name="Con_Accesorios">Con accesorios</string>
    <string name="Sin_Accesorios">Sin Accesorios</string>
    <string name="Saber_Mas">Saber más</string>
    <string name="Sala_para">Sala Para Dos Personas</string>
    <string name="Dos_Personas">dos personas</string>
    <string name="Cuatro_Personas">cuatro personas</string>
    <string name="Seis_Personas">seis personas</string>
    <string name="Ocho_Personas">ocho personas</string>
    <string name="Diez_Personas">diez personas</string>
    <string name="Buscar_Salas_Disponibles">Buscar Salas Disponibles</string>
    <string name="Las_Salas_Disponibles_Son">"Salas Disponibles "</string>
    <string name="De">De</string>
    <string name="Aire_acondicionado">Aire acondicionado</string>
    <string name="descripcion_aire">para un ambiente fresco y agradable</string>
    <string name="pizarra_rotuladores">Pizarra y rotuladores</string>
    <string name="Descripcion_pizarra">para facilitar la comunicación y colaboración</string>
    <string name="Television">Televisión</string>
    <string name="Descripcion_television">para entretenimiento o presentaciones</string>
    <string name="Regletas">Regletas</string>
    <string name="Descripcion_regletas">para conectar múltiples dispositivos electrónicos</string>
    <string name="Reservala_ya">Resérvala Ya</string>
    <string name="Numero_paginas">Número de páginas</string>
    <string name="Paginas">páginas</string>
    <string name="Autor">Autor</string>
    <string name="Editorial">Editorial</string>
    <string name="Genero">Género</string>
    <string name="Sinopsis">Sinopsis</string>
    <string name="Romance">Romance</string>ºººº
    <string name="pfp_image_path" translatable="false">images/pfp</string>
    <string name="images_dafult" translatable="false">images/default</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="descripcionAire">- Aire acondicionado para un ambiente fresco y agradable.</string>
    <string name="Estadisticas">Estadísticas</string>
    <string name="Libros_populares">Libros más populares</string>
    <string name="Ciencia">Ciencia</string>
    <string name="Novela">Novela</string>
    <string name="Poesia">Poesía</string>
    <string name="Historia">Historia</string>
    <string name="Privacidad">Privacidad</string>
    <string name="Idioma">Idioma</string>
    <string name="Historial">Historial</string>
    <string name="Mis_reservas">Mis Reservas</string>
    <string name="Libros">Libros</string>
    <string name="Salas">Salas</string>
    <string name="Permitir_salas">Permitir notificaciones de salas</string>
    <string name="Permitir_libros">Permitir notificaciones libros</string>
    <string name="Permitir_afluencia">Permitir notificaciones de afluencia</string>
    <string name="Permitir_reservas">Permitir notificaciones de reservas</string>
    <string name="Categoria">Categoría</string>
    <string name="Permitir_ubicacion">Permiri acceso a mi ubicación</string>
    <string name="Permitir_correo">Permitir acceso a mis datos de correo</string>
    <string name="Politica">Recopilamos información como nombre, correo electrónico y datos de reserva para procesar reservas y mejorar la aplicación. No compartimos su información sin su consentimiento, salvo cuando sea necesario legalmente. Tomamos medidas para proteger sus datos.  Usted tiene derecho a acceder, corregir o eliminar sus datos personales. Utilizamos cookies para mejorar la experiencia. Puede administrarlas desde la configuración de su dispositivo.  Esta política puede actualizarse; le informaremos sobre cambios importantes.                                                                                                                                        Al usar Bibliotech, acepta esta política de privacidad.</string>
    <string name="he_leido">He leido y acepto las politicas de privacidad</string>
    <string name="Guardar_cambios">Guardar Cambios</string>
    <string name="Datos_Reserva">Datos Reserva</string>
    <string name="Fecha_reserva">Fecha de reserva:</string>
    <string name="Fecha_devolucion">Fecha de devolución:</string>
    <string name="Fecha">Fecha</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Volver">Volver</string>
    <string name="Anadir">Añadir</string>
    <string name="Primera_planta_H110">Primera Planta H110</string>
    <string name="Region">Región</string>
    <string name="Mas_Populares">Más Populares</string>
    <string name="Filtrar">Filtrar</string>
    <string name="Guardar_pos">Guardar Posición</string>
    <string name="izq">Izquierda</string>
    <string name="Arri">Arriba</string>
    <string name="baj">Abajo</string>
    <string name="dere">Derecha</string>
</resources>